--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     type="text"
     placeholder="Search Box"
   /> -->
+    <!-- <diV id="input-div">
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+    </diV> -->
 
-  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div id="map"></div>
     <!-- <script type="text/javascript"  src="https://maps.google.com/maps/api/js?libraries=drawing&key=AIzaSyCNbeeQkzM00teA9jztkYNaViNUhIA879U"> -->
-      <script type="text/javascript"  src="https://maps.google.com/maps/api/js?libraries=drawing&key=AIzaSyAeRAjCefhPKRbpAMAZHP54M3VxvTi4CGM"></script>
+      <script type="text/javascript"  src="https://maps.google.com/maps/api/js?libraries=drawing,places&key=AIzaSyAeRAjCefhPKRbpAMAZHP54M3VxvTi4CGM"></script>
       <script src="http://d3js.org/d3.v2.min.js"></script>
       <script type="text/javascript" src="javascript.util.min.js"></script>
       <script type="text/javascript" src="jsts.min.js"></script>
