--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
     <div id="map"></div>
     <!-- <script type="text/javascript"  src="https://maps.google.com/maps/api/js?libraries=drawing&key=AIzaSyCNbeeQkzM00teA9jztkYNaViNUhIA879U"> -->
       <script type="text/javascript"  src="https://maps.google.com/maps/api/js?libraries=drawing,places&key=AIzaSyAeRAjCefhPKRbpAMAZHP54M3VxvTi4CGM"></script>
-      <script src="http://d3js.org/d3.v2.min.js"></script>
+      <!-- <script src="http://d3js.org/d3.v2.min.js"></script> -->
+      <script type="text/javascript" src="d3.v2.min.js"></script>
       <script type="text/javascript" src="javascript.util.min.js"></script>
       <script type="text/javascript" src="jsts.min.js"></script>
-      <script type="text/javascript" src="http://bl.ocks.org/d/5020993/polybrush.js"></script> 
+      <!-- <script type="text/javascript" src="http://bl.ocks.org/d/5020993/polybrush.js"></script>  -->
+      <script type="text/javascript" src="polybrush.js"></script> 
       
     </script>
     <script>
-      window.acheived_lat = 27.984707;
-      window.acheived_lon = 65.070928;
-      // window.acheived_lat = 3063779.39;
-      // window.acheived_lon = 715314.95;
+      // window.acheived_lat = 27.984707;
+      // window.acheived_lon = 65.070928;
+      window.acheived_lat = 32.0437712066856;
+      window.acheived_lon = 73.9171851551951;
     </script>
     <div id="panel">
       <div id="color-palette"></div>
